对门户管理模块进行了优化